# Lag

./: .gitignore  Cargo.toml  README.md
datasets/: count_vectorizer.py  custom_word2vec.py  pretrained_word2vec.py  pyproject.toml  word2vec.train
datasets/embeddings/: custom_word2vec.csv  custom_word2vec_vocab.csv  simple_count_vectorizer.csv
datasets/exports/: space_embeddings.csv  space_vocab.csv
datasets/models/: space_word2vec.pkl
src/: main.rs  vector.rs
src/engine/: asymmetric.rs  bruteforce.rs  engine.rs  mod.rs
