[project]
name = "datasets"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor Velev",email = "viktorvelev8@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "gensim @ git+https://github.com/piskvorky/gensim.git"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
